# transfer-queue

./: .clangd  .gitignore  CMakeLists.txt  README.md
cmake/client/: CMakeLists.txt
cmake/examples/: CMakeLists.txt
cmake/server/: CMakeLists.txt
cmake/tests/: CMakeLists.txt
docs/: API.md  ARCHITECTURE.md  DATABASE.md  STORAGE.md  transferqueue-design.md
examples/: README.md  read_example.cc  status_example.cc  write_example.cc
include/transfer_queue/: echo_server.h  serializer.h
include/transfer_queue/client/: client.h
include/transfer_queue/common/: config.h  trajectory.h
include/transfer_queue/server/: buffer_manager.h  buffer_shard.h  dedup_filter.h  disk_storage.h  http_handler.h  metrics.h  rpc_handler.h  spdk_storage.h
proto/: echo.proto  transferqueue.proto
src/: echo_client.cc  echo_server.cc  main.cc
src/client/: client.cc  main.cc
src/server/: buffer_manager.cc  buffer_shard.cc  dedup_filter.cc  disk_storage.cc  http_handler.cc  main.cc  metrics.cc  rpc_handler.cc
tests/: test_buffer_manager.cc  test_buffer_shard.cc  test_buffer_shard_spill.cc  test_dedup_filter.cc  test_disk_storage.cc  test_streaming.cc
